# RoTools

./: .clang-format  .clang-tidy  .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  index.html  make_symlink.sh  mkdocs.yml  package.xml  requirements.txt  setup.py  setup_jetbrains.sh  sitemap.xml
.ci/: Dockerfile.melodic  Dockerfile.noetic
.github/workflows/: ci.yml
cmake/: PepTools.cmake
config/: roport_msg_aggregator.yaml  walker_stack.yaml
config/rviz/: cartesio_curiosity.rviz
docs/: index.md
docs/reference/: common.md  index.md
docs/stylesheets/: extra.css
include/Reflexxes/: RMLFlags.h  RMLInputParameters.h  RMLOutputParameters.h  RMLPositionFlags.h  RMLPositionInputParameters.h  RMLPositionOutputParameters.h  RMLVector.h  RMLVelocityFlags.h  RMLVelocityInputParameters.h  RMLVelocityOutputParameters.h  ReflexxesAPI.h  TypeIIRMLDecisionTree1A.h  TypeIIRMLDecisionTree1B.h  TypeIIRMLDecisionTree1C.h  TypeIIRMLDecisionTree2.h  TypeIIRMLDecisions.h  TypeIIRMLMath.h  TypeIIRMLPolynomial.h  TypeIIRMLPosition.h  TypeIIRMLQuicksort.h  TypeIIRMLStep1IntermediateProfiles.h  TypeIIRMLStep1Profiles.h  TypeIIRMLStep2IntermediateProfiles.h  TypeIIRMLStep2Profiles.h  TypeIIRMLStep2WithoutSynchronization.h  TypeIIRMLVelocity.h
include/roport/: bt_action_node.h  bt_generic_types.h  bt_service_node.h  cartesio_server.h  common.h  control_server.h  hpp_interface.h  moveit_cpp_server.h  msg_aggregator.h  msg_converter.h  online_trajectory_optimizer.h  robot_interface.h  rosout_logger.h
launch/: cartesio_curiosity_recorder.launch  moveit_ocrtoc.launch  roport_cartesio_server.launch  roport_hpp_manipulation_client.launch  roport_hpp_manipulation_pr2_client.launch  roport_interactive_marker_client.launch  roport_msg_aggregator.launch  roport_mujoco_server.launch  roport_ocrtoc.launch  roport_optitrack_client.launch  roport_panda.launch  roport_planner_test.launch  roport_snapshot_server.launch  roport_trigger_client_test.launch  roport_websocket_client.launch  roport_xsens.launch
misc/: setup_jetbrains.sh  setup_tools.sh
msg/: CartesianTrajectory.msg  CartesianTrajectoryPoint.msg  PoseVelocity.msg
scripts/: roport_base_state_publisher.py  roport_flask_server_template.py  roport_hpp_manipulation_client.py  roport_interactive_marker_client.py  roport_moveit_py_server.py  roport_moveit_server.py  roport_mujoco_server.py  roport_optitrack_client.py  roport_planner_server.py  roport_recorder.py  roport_rollout_server.py  roport_sensing_server.py  roport_snapshot_server.py  roport_trigger_client.py  roport_websocket_client.py  roport_xsens_server.py
search/: search_index.json
src/: roport_cartesio_server.cpp  roport_control_server.cpp  roport_hpp_interface.cpp  roport_lqr_solver.cpp  roport_moveit_cpp_server.cpp  roport_msg_aggregator.cpp  roport_msg_converter.cpp  roport_robot_interface.cpp  roport_task_scheduler.cpp
src/lib/: cartesio_addon.cpp  cartesio_server.cpp  control_server.cpp  hpp_interface.cpp  moveit_cpp_server.cpp  msg_aggregator.cpp  msg_converter.cpp  online_trajectory_optimizer.cpp  robot_interface.cpp  rosout_logger.cpp
src/lib/Reflexxes/: ReflexxesAPI.cpp  TypeIIRMLCalculatePositionalExtrems.cpp  TypeIIRMLDecisionTree1A.cpp  TypeIIRMLDecisionTree1B.cpp  TypeIIRMLDecisionTree1C.cpp  TypeIIRMLDecisionTree2.cpp  TypeIIRMLDecisions.cpp  TypeIIRMLFallBackStrategy.cpp  TypeIIRMLIsPhaseSynchronizationPossible.cpp  TypeIIRMLPolynomial.cpp  TypeIIRMLPosition.cpp  TypeIIRMLQuicksort.cpp  TypeIIRMLSetupModifiedSelectionVector.cpp  TypeIIRMLStep1.cpp  TypeIIRMLStep1IntermediateProfiles.cpp  TypeIIRMLStep1Profiles.cpp  TypeIIRMLStep2.cpp  TypeIIRMLStep2IntermediateProfiles.cpp  TypeIIRMLStep2PhaseSynchronization.cpp  TypeIIRMLStep2Profiles.cpp  TypeIIRMLStep2WithoutSynchronization.cpp  TypeIIRMLStep3.cpp  TypeIIRMLVelocity.cpp  TypeIIRMLVelocityMethods.cpp  (+4 more)
src/lib/ruckig/: CMakeLists.txt  README.md  package.xml  setup.py
src/lib/ruckig/.github/workflows/: ci.yml  publish.yml
src/lib/ruckig/cmake/: FindReflexxes.cmake
src/lib/ruckig/doc/pages/: example_1.md  example_2.md  example_3.md  example_4.md  example_5.md  example_6.md  example_7.md  example_8.md  intermediate_waypoints.md
src/lib/ruckig/examples/: 1_position.cpp  1_position.py  2_position_offline.cpp  2_position_offline.py  3_waypoints.cpp  3_waypoints.py  4_waypoints_online.cpp  4_waypoints_online.py  5_velocity.cpp  5_velocity.py  6_stop.cpp  6_stop.py  7_minimum_duration.cpp  7_minimum_duration.py  8_dynamic_dofs.cpp
src/lib/ruckig/include/ruckig/: block.hpp  brake.hpp  calculator.hpp  calculator_online.hpp  calculator_target.hpp  input_parameter.hpp  output_parameter.hpp  position.hpp  profile.hpp  reflexxes_comparison.hpp  roots.hpp  ruckig.hpp  trajectory.hpp  utils.hpp  velocity.hpp
src/lib/ruckig/src/: brake.cpp  position-step1.cpp  position-step2.cpp  python.cpp  velocity-step1.cpp  velocity-step2.cpp
src/lib/ruckig/test/: otg-benchmark.cpp  otg-test.cpp  plot_multiple.py  plot_target.py  plot_waypoints.py  plotter.py  randomizer.hpp
srv/: ExecuteAddCollisionBox.srv  ExecuteAddCollisionPlane.srv  ExecuteAllCartesianTrajectories.srv  ExecuteAllLockedPoses.srv  ExecuteAllPlans.srv  ExecuteAllPoses.srv  ExecuteAttachCollisionBox.srv  ExecuteBinaryAction.srv  ExecuteDetachCollision.srv  ExecuteDualArmPose.srv  ExecuteDualArmPoseTorsoJointPosition.srv  ExecuteEllipticalTrajectory.srv  ExecuteFrankaGripperGrasp.srv  ExecuteGroupJointStates.srv  ExecuteGroupNamedStates.srv  ExecuteGroupPlan.srv  ExecuteGroupPose.srv  ExecuteGroupPosition.srv  ExecuteGroupShift.srv  ExecuteGroupWaypointsPose.srv  ExecuteJointPosition.srv  ExecuteManipulationPlanning.srv  ExecuteMirroredPose.srv  ExecutePathPlanning.srv  ExecuteRemoveCollision.srv  GetAllNames.srv  GetGroupJointStates.srv  GetGroupPose.srv  GetImageData.srv  GetPreparePose.srv  GetTransformedPose.srv  SaveImage.srv  SaveJointState.srv  SaveOdometry.srv  SavePose.srv  SenseManipulationPoses.srv  VisualizePose.srv
tree/: ocrtoc_demo.xml  palette.xml  roport_mz25_demo.xml  roport_panda_demo.xml  roport_walker_demo.xml
(+79 files in other folders)
