<?xml version="1.0"?>
<package format="2">
  <name>roport</name>
  <version>0.1.0</version>
  <description>The roport package</description>

  <maintainer email="zhipengdongneu@gmail.com">Zhipeng Dong</maintainer>

  <license>BSD 2-Clause</license>

  <url type="website">http://wiki.ros.org/roport</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>ubt_core_msgs</build_depend>
  <build_depend>franka_core_msgs</build_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>ubt_core_msgs</build_export_depend>
  <build_export_depend>franka_core_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>ubt_core_msgs</exec_depend>
  <exec_depend>franka_core_msgs</exec_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
